--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div class="containerabout container-fluid"> 
   <div class="row">
 <div class="col-12 col-xxl-4"><img src="image/about.jpg" alt="" class="border rounded-circle text-center"></div>
-  <div class=" col-12 col-xxl-8 aboutpara"> <p class="p-3 mt-4">I am a Full stack Developer with a passion for building beautiful and user-friendly websites. Ihave a strong understanding of both front-end and back-end developmet, and I am excited to put my skills to use in a professional setting.I am a quick learner and a team player, and I am confident that I can be a valuable asset to any web development team.</p>
+  <div class=" col-12 col-xxl-8 aboutpara"> <p class="p-3 mt-4">I am a Full stack Developer with a passion for building beautiful and user-friendly websites. I have a strong understanding of both front-end and back-end development, and I am excited to put my skills to use in a professional setting.I am a quick learner and a team player, and I am confident that I can be a valuable asset to any web development team.</p>
     </div>
     </div></div>
     <!--end-->
@@ -116,7 +116,7 @@
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+            <div class="accordion-body"> I have attended a 6 month duration course on Entri Elevate</div>
           </div>
         </div>
       </div>
