--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="col-12 col-sm-8 col-md-8 align-self-center"><p>Hi there,<br>I am Shehana<span class="lastname"> Pareeth </span><br><h1><span class="lastname">MERN </span>Stack Developer</h1></p></div>
             <div class="col-12 col-sm-4 col-md-4
-            "><img src="/image/tra.png" class="myphoto" alt="..."></div>
+            "><img src="./image/tra.png" class="myphoto" alt="..."></div>
           </div>
     </div>
   
