--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#" style="color:#CDA84F;">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#home" style="color:#CDA84F;">Home</a>
                           </li>
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="#" style="color:#CDA84F;">About</a>
+                              <a class="nav-link" aria-current="page" href="#about" style="color:#CDA84F;">About</a>
                             </li>
                           </ul>
                           <ul class="navbar-nav">
                             <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="#" style="color:#CDA84F;">Skills</a>
+                              <a class="nav-link" aria-current="page" href="#skills" style="color:#CDA84F;">Skills</a>
                             </li>
                           </ul>
                           <ul class="navbar-nav">
                             <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="#" style="color:#CDA84F;">My projects</a>
+                              <a class="nav-link" aria-current="page" href="#project" style="color:#CDA84F;">My projects</a>
                             </li>
                           </ul>
                           <ul class="navbar-nav">
                             <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="#" style="color:#CDA84F;">Contact me</a>
+                              <a class="nav-link" aria-current="page" href="#contactme" style="color:#CDA84F;">Contact me</a>
                             </li>
                           </ul>
                           <ul class="navbar-nav">
@@ -75,7 +75,7 @@
   
 <!--end of section1-->
 <!--sart of about section-->
-<h1 class="text-center p-4" style="color: #f6b724;">About me</h1>
+<h1 class="text-center p-4" style="color: #f6b724;" id="about">About me</h1>
 <div class="containerabout container-fluid"> 
   <div class="row">
 <div class="col-12 col-xxl-4"><img src="image/about.jpg" alt="" class="border rounded-circle text-center"></div>
@@ -123,7 +123,7 @@
     </div>
     </div>
     <!--start-->
-    <h1 class="text-center p-4"  style="color: #f6b724;" >My Skills</h1>
+    <h1 class="text-center p-4"  style="color: #f6b724;" id="skills" >My Skills</h1>
     <div class="skillcontainer container">
       <div class="col-12 col-sm-4 col-md-4">
     <div class="card">
@@ -170,7 +170,7 @@
   </div>
 </div>
 <!--end-->
-<h1 class="text-center  m-5" style="color: #f6b724;">My Projects</h1>
+<h1 class="text-center  m-5" style="color: #f6b724;" id="project">My Projects</h1>
 <div class="containerprojects container">
   <!--start-->
   <div class="row">
@@ -219,7 +219,7 @@
   <!--contact-->
   <div class=" mt-5">
     <div class="row">
-      <h1 class="p-4 border rounded-pill text-center" style="color: #f6b724;background-color:black;">CONTACT ME</h1>
+      <h1 class="p-4 border rounded-pill text-center" style="color: #f6b724;background-color:black;" id="contactme">CONTACT ME</h1>
       <div class="col-lg-6 col-xxl-6">
         <img src="image/telephone-612061_1920.jpg" alt="" class="text-center mt-5 contactimage">
       </div>
