--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Git</li>
         <li class="list-group-item">Git hub</li>
-        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">RegExp</li>
       </ul>
       
     </div>
