--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body"> I have attended a 6 month duration course on Entri Elevate</div>
+            <div class="accordion-body"> I have attended a 6 month duration course on MERN stack from Entri Elevate</div>
           </div>
         </div>
       </div>
