--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="card-body">
       <h6 class="card-title">Face book landing page</h6>
       <p>Built using HTML5 and CSS</p>
-      <a href="https://shehana-pareeth.github.io/FacebookLandingPage/" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
+      <a href="https://shehana-pareeth.github.io/FacebookLandingPage/"  target="_blank" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
     </div>
   </div>
 </div>
@@ -190,7 +190,7 @@
     <div class="card-body">
       <h6 class="card-title">JCB Static Website</h6>
       <p>Built using HTML5,CSS and JS</p>
-      <a href="https://shehana-pareeth.github.io/JcbRepository/" class="btn text-light" style="background-color: #543c03;margin-bottom: 2px;">Visit Live Page</a>
+      <a href="https://shehana-pareeth.github.io/JcbRepository/"  target="_blank" class="btn text-light" style="background-color: #543c03;margin-bottom: 2px;">Visit Live Page</a>
     </div>
   </div>
 </div>
@@ -200,7 +200,7 @@
     <div class="card-body">
       <h6 class="card-title">Spotify Static Website</h6>
       <p>Built using HTML5,CSS,JS and Bootstrap5</p>
-      <a href="https://shehana-pareeth.github.io/SpotifyRepository/" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
+      <a href="https://shehana-pareeth.github.io/SpotifyRepository/"  target="_blank" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
     </div>
   </div>
 </div>
@@ -210,7 +210,7 @@
     <div class="card-body">
       <h6 class="card-title">Netflix clone</h6>
       <p>Built using React Js, CSS</p>
-      <a href="https://657178ac4dd10b53dc5199aa--friendly-scone-37a8e1.netlify.app/" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
+      <a href="https://657178ac4dd10b53dc5199aa--friendly-scone-37a8e1.netlify.app/"  target="_blank" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
     </div>
   </div>
 </div>
@@ -224,7 +224,7 @@
         <div class="card-body">
           <h6 class="card-title">TODO App</h6>
           <p>Built using React Js and CSS </p>
-          <a href="https://6575fe525d23535115e34c09--candid-marshmallow-7cff0a.netlify.app/" class="btn text-light" style="background-color: #543c03;margin-bottom: 2px;">Visit Live Page</a>
+          <a href="https://6575fe525d23535115e34c09--candid-marshmallow-7cff0a.netlify.app/"  target="_blank" class="btn text-light" style="background-color: #543c03;margin-bottom: 2px;">Visit Live Page</a>
         </div>
       </div>
     </div>
@@ -234,7 +234,7 @@
       <div class="card-body">
         <h6 class="card-title">Blog Website</h6>
         <p>Full stack project built using Handlebars on the front end,Node js on the backend and Mongodb</p>
-        <a href="https://myblog-tafw.onrender.com/" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
+        <a href="https://myblog-tafw.onrender.com/" target="_blank" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
       </div>
     </div>
   </div>
@@ -245,7 +245,7 @@
       <div class="card-body">
         <h6 class="card-title">Online Sports Court Booking Website</h6>
         <p >MERN project built using React Js,Node js ,Express Js,Mongodb,CSS,JWT webtoken,Redux,React Bootstarap </p>
-        <a href="https://merncourtfront.onrender.com/" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
+        <a href="https://merncourtfront.onrender.com/"  target="_blank" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
       </div>
     </div>
   </div>
@@ -255,7 +255,7 @@
       <div class="card-body">
         <h6 class="card-title">Upcoming</h6>
         <p></p>
-        <a href="#" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
+        <a href="#"  target="_blank" class="btn text-light" style="background-color: #543c03;">Visit Live Page</a>
       </div>
     </div>
   </div>
